# mcp-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
DOCS/: README.md  jsonl-schema.md  mcp-harness-feedback.md
DOCS/DOING/: T034-stdio-transport.md  T040-e2e-scenario-format-and-runner.md  T041-scenario-explore-unknown-mcp.md  T042-scenario-tool-choice-under-scoping.md  T043-scenario-fail-loudly.md
DOCS/DONE/: T001-pytest-scaffolding-fake-llm.md  T002-in-process-fake-mcp-server.md  T003-ci-pipeline.md  T004-toolchain-license.md  T010-extract-pure-functions.md  T011-extract-agent-loop.md  T012-full-tool-result-fidelity.md  T013-transcript-sink.md  T015-visible-tool-error-marker.md  T016-streamable-http-client-deprecation.md  T020-jsonl-run-log.md  T021-server-fingerprint-expect-tools.md  T022-headless-exit-code-summary.md  T023-turn-loop-brake-batch-resilience.md  T024-tool-error-in-summary.md  T025-list-tools-dump.md  T026-llm-error-handling.md  T030-multi-server-config.md  T031-harness-profiles.md  T032-file-attachment.md  T033-observability-tokens-latency.md  T040-e2e-scenario-format-and-runner.md  T041-scenario-explore-unknown-mcp.md  T042-scenario-tool-choice-under-scoping.md  T043-scenario-fail-loudly.md  T044-test-mcp-over-http.md
DOCS/TODO/: T001-pytest-scaffolding-fake-llm.md  T002-in-process-fake-mcp-server.md  T003-ci-pipeline.md  T004-toolchain-license.md  T010-extract-pure-functions.md  T011-extract-agent-loop.md  T012-full-tool-result-fidelity.md  T013-transcript-sink.md  T015-visible-tool-error-marker.md  T016-streamable-http-client-deprecation.md  T020-jsonl-run-log.md  T021-server-fingerprint-expect-tools.md  T022-headless-exit-code-summary.md  T023-turn-loop-brake-batch-resilience.md  T030-multi-server-config.md  T031-harness-profiles.md  T032-file-attachment.md  T033-observability-tokens-latency.md  T040-e2e-scenario-format-and-runner.md  T041-scenario-explore-unknown-mcp.md  T042-scenario-tool-choice-under-scoping.md  T043-scenario-fail-loudly.md  T044-test-mcp-over-http.md
profiles/: generic-openai.json  raw.json
scenarios/: 01-explore-unknown-mcp.md  02-tool-choice-scoping.md  03-fail-loudly.md  README.md  run.py  system.md
scenarios/reports/: 01-explore-unknown-mcp.raw.txt  01-explore-unknown-mcp.report.md  01-explore-unknown-mcp.transcript.md  02-tool-choice-scoping.A.raw.txt  02-tool-choice-scoping.A.transcript.md  02-tool-choice-scoping.B.raw.txt  02-tool-choice-scoping.B.transcript.md  02-tool-choice-scoping.report.md  03-fail-loudly.raw.txt  03-fail-loudly.report.md  03-fail-loudly.transcript.md
src/mcp_harness/: __init__.py  attachments.py  cli.py  config.py  engine.py  events.py  jsonl.py  llm.py  profiles.py  tools.py  transcript.py
tests/: conftest.py  test_attachments.py  test_batch.py  test_cli.py  test_config.py  test_engine.py  test_fake_mcp.py  test_fingerprint.py  test_http_mcp.py  test_jsonl.py  test_list_tools.py  test_llm.py  test_llm_errors.py  test_observability.py  test_profiles.py  test_stdio_mcp.py  test_summary.py  test_tool_result.py  test_tools.py  test_transcript.py
tests/support/: fake_mcp.py
