[project]
name = "mcp-harness"
version = "0.1.0"
description = "Terminalfönster för att testköra MCP-servrar genom en riktig LLM + systemprompt — och approximera andra MCP-värd-harnesses (Intric, Claude Desktop, Cursor, …)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
mcp-harness = "mcp_harness.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_harness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
