[project]
name = "mcp-harness"
version = "0.1.0"
description = "Terminalfönster för att testköra MCP-servrar genom en riktig LLM + systemprompt — och approximera andra MCP-värd-harnesses (Intric, Claude Desktop, Cursor, …)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Joel Stenberg", email = "l.j.stenberg@gmail.com" }]
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
mcp-harness = "mcp_harness.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "pre-commit>=3.7",
    # Pinnad minor så CI och lokalt formaterar identiskt (format-regler kan
    # ändras mellan minors).
    "ruff>=0.14,<0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_harness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "real_endpoint: kräver en riktig LLM/MCP-endpoint (hoppas i CI; körs lokalt med skarp .env)",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# Test-fixturer använder FastMCP:s otypade verktygs-dekoratorer; relaxa just det
# i testkoden — produktionskoden (src) hålls strikt.
module = "tests.*"
disallow_untyped_decorators = false
